# KindVidGen

./: .commitlintrc.json  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  package.json  pyproject.toml
kvidgen/: __main__.py  main.py
kvidgen/api/: api_routers.py
kvidgen/api/endpoints/: management.py  video.py
kvidgen/core/: config.py  pipline.py
kvidgen/core/agents/: base_model.py  editor.py  prompts.py
kvidgen/core/audio/: audio_concat.py  audio_mixer.py  audio_video.py
kvidgen/core/video/: effect.py  video_generator.py
kvidgen/models/: http.py
kvidgen/schemas/: fundraising.py
kvidgen/service/: video.py
kvidgen/utils/: common.py  download.py  oss_client.py  tts_client.py
